<resources>
    <string name="app_name">KrionLight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_name">Найденные устройства:</string>
    <string name="discovering">Поиск…</string>
    <string name="brightness">Яркость</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="power">power</string>
    <string name="start">start</string>
    <string name="drying">drying</string>
    <string name="cooling">cooling</string>
    <string name="procedure_timer">180 сек</string>
    <string name="krion">KRION</string>
</resources>