<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/container"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/super_left_vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_vertical_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upper_bottom_horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upper_horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/super_bottom_horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.99" />

    <LinearLayout
        android:id="@+id/functional_layout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/upper_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/middle_horizontal_line"
        app:layout_constraintStart_toStartOf="@id/left_vertical_line"
        app:layout_constraintEnd_toEndOf="@id/right_vertical_line">

        <Button
            android:id="@+id/btn_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/power"
            tools:ignore="MissingConstraints"
            android:background="@drawable/custom_btn_power"/>

        <Button
            android:id="@+id/btn_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            tools:ignore="MissingConstraints"
            android:background="@drawable/custom_btn_procedure"
            android:layout_marginTop="10sp"/>

        <Button
            android:id="@+id/btn_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drying"
            tools:ignore="MissingConstraints"
            android:background="@drawable/custom_btn_drying"
            android:layout_marginTop="10sp"/>

        <Button
            android:id="@+id/btn_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cooling"
            tools:ignore="MissingConstraints"
            android:background="@drawable/custom_btn_cooling"
            android:layout_marginTop="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/functional_layout"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/middle_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/upper_bottom_horizontal_line"
        app:layout_constraintStart_toStartOf="@id/left_vertical_line">

        <ImageButton
            android:id="@+id/btn_lift_up"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_btn"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_up"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/ic_lift"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/lift"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_name"/>

        <ImageButton
            android:id="@+id/btn_lift_down"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_btn"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_down"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_rgb_brighness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/functional_layout"
        android:backgroundTint="@color/white"
        android:contentDescription="TODO"
        android:src="@drawable/ic_brightness"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        app:layout_constraintTop_toTopOf="@id/middle_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/upper_bottom_horizontal_line"
        app:layout_constraintStart_toStartOf="@id/left_vertical_line"
        app:layout_constraintEnd_toEndOf="@id/right_vertical_line"/>

    <LinearLayout
        android:id="@+id/pipelift_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/functional_layout"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/middle_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/upper_bottom_horizontal_line"
        app:layout_constraintEnd_toStartOf="@id/right_vertical_line">

        <ImageButton
            android:id="@+id/btn_pipe_up"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/custom_btn"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_up"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/ic_ck_27"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ck_27"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:contentDescription="@string/app_name"
            />

        <ImageButton
            android:id="@+id/btn_pipe_down"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_btn"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_down"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/timer_seek_bar"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:thumbTint="@color/teal"
        android:progressTint="@color/teal"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="@id/upper_bottom_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_line"
        app:layout_constraintStart_toStartOf="@id/left_vertical_line"
        app:layout_constraintEnd_toEndOf="@id/right_vertical_line"/>

    <TextView
        android:id="@+id/timer_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/procedure_timer"
        android:textSize="22sp"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/upper_bottom_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_line"
        app:layout_constraintStart_toStartOf="@id/super_left_vertical_line"/>

    <ImageButton
        android:id="@+id/timer_btn_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="TODO"
        android:foregroundTint="@color/white"
        android:src="@drawable/ic_timer"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck"
        app:layout_constraintTop_toTopOf="@id/upper_bottom_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/bottom_horizontal_line"
        app:layout_constraintEnd_toStartOf="@id/right_vertical_line"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:src="@drawable/logo_background"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/bottom_horizontal_line"/>

    <TextView
        android:id="@+id/krion_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/krion"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/black"
        android:textSize="50sp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/bottom_horizontal_line"
        app:layout_constraintBottom_toBottomOf="@id/super_bottom_horizontal_line"
        app:layout_constraintStart_toStartOf="@id/left_vertical_line"
        app:layout_constraintEnd_toEndOf="@id/right_vertical_line"/>
</androidx.constraintlayout.widget.ConstraintLayout>